/*
命名规范：
    消息名称：大写字母开头，每个单词大写
    成员变量：全部小写，单词以'_'隔开
    extendsion identifier: id + 消息名称 （*必须如此，程序中的宏沿用了此规范）
*/


package com.iod.pb.common;

message BaseMsg {
	optional sint32 from = 1;
	optional sint32 to = 2;
	optional sint32 flags = 3;
	required sint32 message_id = 4;
	
	extensions 1000 to 10000;
}
